@@ -1,4 +1,4 @@
-Copyright (c) 2014, Hannes Mehnert
+Copyright (c) 2014, Hannes Mehnert, Anil Madhavapeddy
 All rights reserved.
 
 Redistribution and use in source and binary forms, with or without
